--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img src="flagpack--mx.png" alt="Mexican" class="logo">
+        <img src="Assets/mexican_flag.png" alt="Mexican" class="logo">
         <ul class="nav-menu">
             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
@@ -31,17 +31,17 @@
         <h1>Our Menu</h1>
         <div class="grid-container container">
             <div class="menu-container item1">
-                <img src="burito_carne_asada.jpeg" alt="Burito Carne Asada">
+                <img src="Assets/burito_carne_asada.jpeg" alt="Burito Carne Asada">
                 <h3>Burito Carne Asada</h3>
                 <h5>Burito filled with Mexican authentuic grilled meat</h5>
             </div>
             <div class="menu-container item2">
-                <img src="burito_pollo_chille.jpg" alt="Burito Pollo con Chille">
+                <img src="Assets/burito_pollo_chille.jpg" alt="Burito Pollo con Chille">
                 <h3>Burito Pollo con Chille</h3>
                 <h5>Burito filled with spicy chicken</h5>
             </div>
             <div class="menu-container item3">
-                <img src="burger.jpg" alt="Burger">
+                <img src="Assets/burger.jpg" alt="Burger">
                 <h3>Burger</h3>
                 <h5>Special burger by our restaurant that will crave your gut</h5>
             </div>
@@ -50,13 +50,14 @@
             <h1>Our Gallery</h1>
             <div class="grid-gallery">
                 <picture class="grid-item1 child">
-                    <source srcset="mexican_flag.png" media="(min-width: 600px)">
-                    <img src="metropolitan-cathedral-zocalo-mexico-city.webp" alt="">
+                    <source srcset="Assets/mexican_flag" media="(min-width: 600px)">
+                    <img src="Assets/metropolitan-cathedral-zocalo-mexico-city.webp" alt="">
                 </picture>
-                <img class="grid-item2 child" src="maxresdefault.jpg" alt="">
-                <img class="grid-item3 child" src="KH_011924_MDWL0076-525cbfe2b7364ec487682b55a3935816.jpg" alt="">
+                <img class="grid-item2 child" src="Assets/maxresdefault.jpg" alt="">
+                <img class="grid-item3 child" src="Assets/KH_011924_MDWL0076-525cbfe2b7364ec487682b55a3935816.jpg"
+                    alt="">
                 <img class="grid-item4 child"
-                    src="depositphotos_87542386-stock-photo-person-wearing-sombrero-hat-in.jpg" alt="">
+                    src="Assets/depositphotos_87542386-stock-photo-person-wearing-sombrero-hat-in.jpg" alt="">
                 <div class="grid-item5">
                     <h2 class="text">Happy Taco</h2>
                     <h2 class="text">Happy Tummy</h2>
