--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img src="Assets/mexican_flag.png" alt="Mexican" class="logo">
+        <img src="Assets/flagpack--mx.png" alt="Mexican" class="logo">
         <ul class="nav-menu">
             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
@@ -50,7 +50,7 @@
             <h1>Our Gallery</h1>
             <div class="grid-gallery">
                 <picture class="grid-item1 child">
-                    <source srcset="Assets/mexican_flag" media="(min-width: 600px)">
+                    <source srcset="mexican_flag.png" media="(min-width: 600px)">
                     <img src="Assets/metropolitan-cathedral-zocalo-mexico-city.webp" alt="">
                 </picture>
                 <img class="grid-item2 child" src="Assets/maxresdefault.jpg" alt="">
